package localhost.thien.vendingmachine;

public class FinishVendingException extends RuntimeException {
    public FinishVendingException() {}
}
