@startuml

class Main {
	{static} void main()
}

class FinishVendingException {
	+FinishVendingException()
}

class VendingMachineConsoleInterface {
	-keyboard : Scanner
	-vendingMachineInventory : VendingMachineInventory
	+VendingMachineConsoleInterface(keyboard : Scanner, vendingMachineInventory : VendingMachineInventory)
	+void purchaseMerchandise()
	-void purchaseSpecifiedMerchandise(merchandiseCode : String, selectedMerchandise : VendingMachineMerchandise)
	-void dispenseMerchandise(merchandiseCode : String, selectedMerchandise : VendingMachineMerchandise, cash : double)
	-double getMoreCash(merchandisePrice : double, merchandiseName : String, cash : double)
	-Optional<VendingMachineMerchandise> getVendingMachineMerchandise(vendingMachineInventory: VendingMachineInventory, merchandiseCode: String)
	+void displayVendingMachineInventory()
}

class VendingMachineInventory {
	-inventory : Map<String, VendingMachineMerchandiseStock>
	-cashBalance : Double
	+Map<String, VendingMachineMerchandiseStock> getInventory()
	+Double getCashBalance()
	+void forEach()
	+void resetCashBalanceAfterPurchase(priceOfMerchandiseSold : double)
	+Optional<VendingMachineMerchandise> getVendingMachineMerchandise(merchandiseCode : String)
	+VendingMachineInventory addMerchandise(merchandiseCode: String, VendingMachineMerchandise : vendingMachineMerchandise, quantity: int)
	+VendingMachineInventory reduceMerchandise(merchandiseCode: String, quantity: int)
	+VendingMachineInventory removeMerchandise(merchandiseCode: String)
}

class VendingMachineMerchandise {
	-merchandiseName : String
	-retailPrice : double
	+String getMerchandiseName()
	+double getRetailPrice()
	+VendingMachineMerchandise(merchandiseName : String, retailPrice : double)
}

class VendingMachineMerchandiseStock {
	-merchandise : VendingMachineMerchandise
	-quantity : int
	+VendingMachineMerchandiseStock(merchandise : VendingMachineMerchandise, quantity : int)
	+VendingMachineMerchandise getMerchandise()
	+int getQuantity()
	+void addQuantity(quantity : Int)
	+void reduceQuantity(quantity: Int)
}

RuntimeException <|-- FinishVendingException

VendingMachineInventory *-- VendingMachineMerchandise

VendingMachineInventory *-- VendingMachineMerchandiseStock

VendingMachineMerchandiseStock *-- VendingMachineMerchandise

VendingMachineConsoleInterface --> VendingMachineInventory

VendingMachineConsoleInterface --> FinishVendingException

Main --> FinishVendingException

@enduml
